--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -4,18 +4,20 @@ on:
     branches:
     - 'master'
     - 'release-*'
+  workflow_dispatch:
+    
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: docker/build-push-action@v2
+      - uses: docker/build-push-action@v6
         with:
           tags: worker-operator:latest
           push: false
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: docker/build-push-action@v2
+      - uses: docker/build-push-action@v6
         with:
           file: test.Dockerfile
           tags: test-image:latest
